      "targetted" and "targetting" as they are valid alternative
      spellings in AU.  (Closes: #852145)
    + [EB] Add some more spelling corrections.  (Closes: #852369, #852404,
      #852407, #852409, #852410, #852411, #852413, #852414, #852416,
      #852419, #852421, #852426)
    + [CL] Add "none were" -> "none was" multiword correction.
      (Closes: 860558)

  * debian/control:
    + [NT] Add explicit (Build-)Depends on dpkg (>= 1.17.14) to make it
      explicit that we no longer support Wheezy or older.
    + [NT] Drop versioned dependencies that are there to assist to
      Wheezy.
  * debian/copyright:
    + [EB] Add Edward Betts.

  * lib/Lintian/CheckScript.pm:
    + [NT] Remove fallback code for "old" style "pm"-less checks.
  * lib/Lintian/Util.pm:
    + [NT] Drop dpkg_deb_has_ctrl_tarfile.  Lintian now assumes that
      dpkg 1.17.14 is available (provided by Debian jessie or later).

  * frontend/dplint:
    + [NT] Ensure all include directories are absolute before passing
      them on to the actual command.
    + [NT] Work around a "Bizarre Copy" bug in perl that could trigger
      on errors.

  * reporting/{config => config.yaml}:
    + [NT] Rewrite the reporting config template into the new YAML format.
  * reporting/graphs/tags.gpi:
    + [NT] Tweak tags.gpi so it works with gnuplot 5.
  * reporting/templates/{index.tmpl,lintian.css.tmpl}:
    + [NT] Update to support multiple archives.

  * t/*:
    + [NT] Drop "Test-Depends" from tests where the versions in Debian
      jessie will satisfy the dependency.
    + [NT] Update tests to fix FTBFS caused by dpkg-source now ignoring
      debian/files by default.  (Closes: #863020)
  * t/runtests:
    + [NT] Re-sort test output after running the "post_test" sed script
      on the output.  This prevent test failures caused by the order
      changing on different architectures prior to the sed script is run
      (assuming the sed script otherwise normalises the differences
      correctly).