@@ -127,4 +127,4 @@ Description: Debian package checker
  should check packages with this tool before uploading them to the
  archive.
  .
- This version of Lintian is calibrated for policy version 3.9.8.
+ This version of Lintian is calibrated for policy version 4.0.0.
